--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="about-section">
+        <div class="inner-container">
+            <h1>About Us</h1>
+            <p class="text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente, voluptate. Unde delectus magnam quae voluptatibus at dolorem perspiciatis sed fugiat. Praesentium atque hic illum, laudantium exercitationem nesciunt quod unde animi deserunt odio nemo asperiores assumenda, harum veniam quisquam illo mollitia accusamus dignissimos provident tempore tenetur eos sed? Cupiditate, fugit totam.
+            </p>
+            <div class="skills">
+                <span>Web Design</span>  
+                <span>Photoshop</span>
+                <span>Coding</span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
